--- a/jupyter_shortcut.ipynb
+++ b/jupyter_shortcut.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ipynb includes sources code of how we organise our cells as well as output for each cell\n",
+    "# green is edit mode, blue is command mode\n",
+    "# access to lists of keyboard shorts by pressing 'H' when command mode"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -26,6 +37,23 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -165,12 +193,13 @@
        "max       10.570000     82.740000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# tab to show list of modules, shift + tab to show information about modules\n",
     "df.describe()"
    ]
   },
@@ -201,13 +230,6 @@
    "source": [
     "df.values"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
